# cgiwrap

./: .cvsignore  .gitignore  .package  ANNOUNCE  BLURB  CHANGES  CRON-STYLE-INFO  Configure  INSTALL  MANIFEST.new  Makefile  Makefile.SH  Makefile.in  PORTING  PROMO  README  README-AFS  THANKS  TODO  URLHELP  Wanted  acconfig.h  allowdeny.c  allowdeny.h  cgiwrap.1  cgiwrap.c  cgiwrap.cat  cgiwrap.h  config.h  config.h.in  config.sh  config_h.SH  configure.in  debug.c  debug.h  fetch.c  fetch.h  getusershell.c  http-auth.pl  make-configure  (+9 more)
.config/: instruct
U/: End.U  conf_access.U  conf_afs.U  conf_allowdeny.U  conf_auxgroups.U  conf_cgidir.U  conf_checks.U  conf_fixed_pathtrans.U  conf_httpduser.U  conf_logrequests.U  conf_nosubdirs.U  conf_redir_stderr.U  conf_setgroups.U  conf_setmethod.U  conf_use_rlimit.U  conf_use_system.U  conf_userdir.U  has_initgroups.U  has_setgid.U  has_setgroups.U  has_setrlimit.U  has_setuid.U  has_sigset.U  has_strdup.U  has_strstr.U
doc/: AFS  ANNOUNCE  CHANGES  COMMENTS  INSTALL  MIRRORS  NOTES  THANKS  URLHELP  accesscontrol  afs  changes  chroot  comments  download  faq  index  install  intro  maillist  notes  pubs  quickref  setup  thanks  todo  tricks  y2k
htdocs/: accesscontrol.html  afs.html  changes.html  chroot.html  comments.html  download.html  faq.html  index.html  install.html  intro.html  maillist.html  notes.html  pubs.html  quickref.html  setup.html  thanks.html  todo.html  tricks.html  y2k.html
unsup/: .cvsignore  README  bconf.pl.SH  loganalyze.doc  loganalyze.pl.SH  loganalyze.pl.in
